# SciNodes

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: docs.yml
cmake/: EmbedSpv.cmake
contracts/: dc_motor.json
doc/custom_nodes/: abs_value.json  tripler.json
doc/db/: custom_nodes.json  dependencies.json  file_format.json  grammar_rules.json  menu_items.json  modules.json  node_types.json  shortcuts.json  simulation_controls.json  tag.json  test_scenarios.json
doc/diagrams/: _preamble.tex  architecture_layers.tex  closed_loop_scenario.tex  codegen_pipeline.tex
doc/fem_sidecar/: README.md  pmsm_lumped_corrections.py  sample_input.json
doc/manual/: book.toml
doc/manual/src/: SUMMARY.md  intro.md
doc/manual/src/architecture/: codegen.md  compute-backend.md  dimensional-analysis.md  file-format.md  glossary.md  grammar.md  i18n.md  libraries.md  node-kinds.md  overview.md  renderer.md  testing.md  thesis-mapping.md  view3d.md
doc/manual/src/dev/: architecture.md  backends.md  build-system.md  compute-backends.md  csv-export.md  custom-registry.md  fft.md  geometry-contracts.md  glossary.md  grammar.md  graphics.md  hot-reload.md  i18n.md  internal-libs.md  multiphysics-codegen.md  native-renderer.md  nodegraph.md  nodekind-dispatch.md  repo-structure.md  scilab-bridge.md  scilab-codegen.md  scn-format.md  shader-compilation.md  solid-refactor.md  subgraph.md  typeexpr.md  units-internals.md  vulkan-3d-renderer.md
doc/manual/src/user/: 3d.md  alias.md  aliases.md  auto-layout.md  custom-nodes.md  devices.md  dimensional.md  examples.md  exporting-data.md  features.md  find-popup.md  geometry-contracts.md  getting-started.md  i18n.md  install.md  introduction.md  io.md  multiphysics.md  nodes-metadata.md  nodes.md  outliner.md  per-param-pins.md  plots.md  running.md  scene-3d.md  shortcuts.md  structural.md  subgraph.md  subgraphs.md  units.md  usage.md  vector-math.md  view3d.md  wiring.md  workspaces.md
examples/: README.md
examples/arm_2r/: arm_2R.blend  arm_2r.gltf
examples/custom_nodes/: quadratic.json
examples/dc_motor/: dc.blend  dc_motor.gltf  dc_motor_raw.gltf
examples/graphs/: index.json  walkthrough_E0.scn  walkthrough_E1.scn  walkthrough_E1_dc.scn  walkthrough_E1_dc_3d.scn  walkthrough_E2.scn  walkthrough_E3.scn  walkthrough_E3b.scn  walkthrough_E4.scn  walkthrough_E5.scn  walkthrough_E6.scn  walkthrough_E7.scn  walkthrough_E8.scn  walkthrough_E9.scn  walkthrough_pid.scn  walkthrough_pid_2.scn
examples/graphs/test_manual/: caso_B.scn  caso_G_grammar.scn  caso_J_bad_params.scn
experiments/call_scilab/: .gitignore  CMakeLists.txt  README.md  backend_motor_dc.cpp  inverse_kinematics.cpp  live_param.cpp  make_pid_scn.cpp  motor_dc.cpp  smoke.cpp
i18n/: en.json  es.json
src/: main.cpp
src/app/: AppWindow.cpp  AppWindow.hpp  AssetService.cpp  AssetService.hpp  FileActions.cpp  FileActions.hpp  FileDialog.cpp  FileDialog.hpp  FrameClock.cpp  FrameClock.hpp  PanelAdapters.hpp  PanelContext.cpp  PanelContext.hpp  PanelInterface.cpp  PanelInterface.hpp  ShortcutHandler.cpp  ShortcutHandler.hpp  SimController.cpp  SimController.hpp  Vulkan3DRenderer.cpp  Vulkan3DRenderer.hpp  VulkanContext.cpp  VulkanContext.hpp  WorkspaceManager.cpp  WorkspaceManager.hpp
src/core/: AssetMapping.cpp  AssetMapping.hpp  ContractRegistry.cpp  ContractRegistry.hpp  CsvExport.cpp  CsvExport.hpp  CsvParamIO.cpp  CsvParamIO.hpp  CustomNodeRegistry.cpp  CustomNodeRegistry.hpp  DeviceAsset.cpp  DeviceAsset.hpp  DimensionalAnalyzer.cpp  DimensionalAnalyzer.hpp  Edge.hpp  ExampleLibrary.hpp  Fft.cpp  Fft.hpp  Field.cpp  Field.hpp  GrammarParser.cpp  GrammarParser.hpp  I18n.cpp  I18n.hpp  IComputeBackend.hpp  ISimSession.hpp  LinearExampleLibrary.cpp  LinearExampleLibrary.hpp  NodeGraph.cpp  NodeGraph.hpp  NodeInstance.cpp  NodeInstance.hpp  NodeKind.cpp  NodeKind.hpp  NodeType.cpp  NodeType.hpp  Quantity.cpp  Quantity.hpp  SceneCollector.cpp  SceneCollector.hpp  (+12 more)
src/core/backends/: ScilabCallApiBackend.cpp  ScilabCallApiBackend.hpp
src/shaders/: asset.frag  asset.vert  motor.vert
src/ui/: AboutGraphPanel.cpp  AboutGraphPanel.hpp  AssetMappingPanel.cpp  AssetMappingPanel.hpp  ExamplesBrowser.cpp  ExamplesBrowser.hpp  NodeCanvas.cpp  NodeCanvas.hpp  NodeCanvasInternal.hpp  NodeCanvasPanels.cpp  NodeCanvasPopups.cpp  NodeCanvasRender.cpp  NodePalette.cpp  NodePalette.hpp  OutlinerPanel.cpp  OutlinerPanel.hpp  PlotPanel.cpp  PlotPanel.hpp  StatusBar.cpp  StatusBar.hpp  View3DPanel.cpp  View3DPanel.hpp  View3DPanelAsset.cpp  View3DPanelInternal.hpp  View3DPanelMesh.cpp
src/ui/canvas/: Canvas.cpp  Canvas.hpp  NativeNodeRenderer.cpp  NativeNodeRenderer.hpp  NativeNodeRendererInteraction.cpp  NativeNodeRendererInternal.hpp  NativeNodeRendererLink.cpp  NativeNodeRendererNode.cpp
src/ui/plots/: HeatmapRenderer.cpp  HeatmapRenderer.hpp  HistogramRenderer.cpp  HistogramRenderer.hpp  PhaseRenderer.cpp  PhaseRenderer.hpp  PlotDefaults.hpp  SpectrumRenderer.cpp  SpectrumRenderer.hpp  WaveRenderer.cpp  WaveRenderer.hpp  ZoomState.hpp
tests/: test_callapi_bridge.cpp  test_canvas.cpp  test_contracts.cpp  test_example_library.cpp  test_grammar.cpp  test_i18n.cpp  test_integration.cpp
tools/: api_doc_coverage.py  audit_all.sh  audit_examples.cpp  build_diagrams.sh  changelog_coverage.py  custom_nodes_coverage.py  dependencies_coverage.py  dump_catalog.cpp  example_library_query.cpp  gen_e6_scn.cpp  gen_e7_scn.cpp  grammar_coverage.py  i18n_coverage.py  migrate_index_to_scn.cpp  node_doc_coverage.py  scn_format_coverage.py  simulation_controls_coverage.py  triple_audit.py
tools/blender/: setup_dc_motor.py
tools/githooks/: pre-commit
